--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 50px 25% auto 25% 50px;
   grid-template-rows: 50px;
-  background: #ccc;
+  background: rgba(91, 61, 116, 0.781);
   margin: 0 auto;
   padding: 1px;
 }
