--- a/src/components/user-list/userBlock.module.css
+++ b/src/components/user-list/userBlock.module.css
@@ -1,15 +1,14 @@
 .avatar {
-  width: 150px;
-  height: 150px;
+  display: grid;
+  width: 195px;
+  height: 195px;
   margin: 0 auto;
-  padding: 0 40px;
 }
 .userNameAndEmail {
-  text-align: center;
   padding: 0;
-  margin: 10px auto;
-  color: #333;
-  font-size: 20px;
+  margin: 10px 5px;
+  color: #eee;
+  font-size: 16px;
   word-wrap: break-word;
 }
 .usersBlock {
@@ -17,14 +16,18 @@
   grid-template-columns: 25% 25% 25% 25%;
   grid-template-rows: auto;
   margin: 20px auto;
-  grid-column-gap: 5px;
-  grid-row-gap: 10px;
+  grid-column-gap: 2px;
+  grid-row-gap: 5px;
   width: 900px;
 }
 .card {
-  max-width: 250px;
-  min-height: 250px;
-  background: #ccc;
-  border-radius: 5px;
+  max-width: 200px;
+  min-height: 200px;
+  background: #333;
+  border-radius: 1px;
   text-decoration: none;
+  -webkit-border-radius: 1px;
+  -moz-border-radius: 1px;
+  -ms-border-radius: 1px;
+  -o-border-radius: 1px;
 }
