--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 50px 25% auto 25% 50px;
   grid-template-rows: 50px;
-  background: rgba(91, 61, 116, 0.781);
+  background: rgba(105, 92, 77, 0.863);
   margin: 0 auto;
   padding: 1px;
 }
@@ -21,7 +21,6 @@
   grid-column: 2/3;
   grid-row: 1/1;
   padding: 0;
-
 }
 .linkItem {
   margin: 0 30px;
@@ -29,4 +28,19 @@
 .linkItem a {
   color: white;
   text-decoration: none;
+}
+@media (max-width: 700px) {
+  .navbarWrapper {
+    grid-template-columns: 50% 50%;
+
+    width: 100%;
+  }
+  .links {
+    grid-column: 2/2;
+    grid-row: 1/1;
+  }
+  .title {
+    grid-column: 1/1;
+    grid-row: 1/1;
+  }
 }
