--- a/src/components/users/userDetails.module.css
+++ b/src/components/users/userDetails.module.css
@@ -2,7 +2,8 @@
   display: grid;
   width: 600px;
   margin: 10px auto;
-  background-color: rgba(211, 211, 211, 0.521);
+  box-shadow: 5px 10px 15px 7px rgba(58, 58, 58, 0.301);
+  background-color: rgba(172, 152, 124, 0.192);
   padding: 20px;
   grid-template-columns: 50% 50%;
   grid-template-rows: 20% 20% 20% 20% 20%;
@@ -18,7 +19,7 @@
 }
 .email {
   font-size: 18px;
-  font-weight: 300;
+  font-weight: 400;
   padding-left: 15px;
 }
 .phone {
@@ -27,11 +28,26 @@
   padding-left: 15px;
 }
 .buttonBack {
+  font-size: 20px;
+  font-weight: 900;
   grid-column: 2/2;
   grid-row: 5/5;
   border: none;
   width: 60px;
   margin: 5px auto;
   max-height: 30px;
-  background-color: rgba(131, 72, 173, 0.596);
+  background-color: transparent;
+  color: rgba(59, 38, 18, 0.808);
+}
+.buttonBack:hover {
+  cursor: pointer;
+  color: rgba(122, 134, 93, 0.863);
+}
+@media (max-width: 850px) {
+  .userWrapper {
+    width: 400px;
+  }
+  .profilePic {
+    margin: 0 auto;
+  }
 }
