--- a/src/components/users/userDetails.module.css
+++ b/src/components/users/userDetails.module.css
@@ -69,9 +69,59 @@
 }
 @media (max-width: 850px) {
   .userWrapper {
-    width: 400px;
+    width: 500px;
   }
   .profilePic {
     margin: 0 auto;
+  }
+}
+@media (max-width: 700px) {
+  .userWrapper {
+    width: 300px;
+    grid-template-columns: 100%;
+    grid-template-rows: auto;
+  }
+  .buttonBack {
+    grid-column: 1/1;
+  }
+  .name {
+    font-size: 18px;
+    padding-left: 5px;
+    margin: 5px auto;
+    text-align: center;
+    grid-row: 2/2;
+    grid-column: 1/1;
+  }
+  .address {
+    grid-row: 6/6;
+    grid-column: 1/1;
+  }
+  .company {
+    grid-column: 8/8;
+    grid-column: 1/1;
+  }
+  .tel {
+    grid-column: 5/5;
+    grid-column: 1/1;
+  }
+  .zip {
+    grid-row: 7/7;
+    grid-column: 1/1;
+  }
+  .email {
+    grid-row: 3/3;
+    grid-column: 1/1;
+  }
+  .web {
+    grid-row: 4/4;
+    grid-column: 1/1;
+  }
+  .descript {
+    margin: 10px auto;
+    grid-row: 9/9;
+    grid-column: 1/1;
+  }
+  .profilePic {
+    grid-row: 1/1;
   }
 }
